crates/pvm-storage/tests/ui/lazy_set_requires_mut.stderr
error[E0133]: call to unsafe function `Lazy::<T>::new` is unsafe and requires unsafe block
 --> tests/ui/lazy_set_requires_mut.rs:8:16
  |
8 |     let lazy = Lazy::<U256>::new(StorageKey::from_slot(0), 0, host);
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
  |
  = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0596]: cannot borrow `lazy` as mutable, as it is not declared as mutable
 --> tests/ui/lazy_set_requires_mut.rs:9:5
  |
9 |     lazy.set(&U256::from(42));
  |     ^^^^ cannot borrow as mutable
  |
help: consider changing this to be mutable
  |
8 |     let mut lazy = Lazy::<U256>::new(StorageKey::from_slot(0), 0, host);
  |         +++
